Fix alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ ol li p {
   margin: .25em;
   margin-top: 0;
   font-size: 1.4rem;
-  font-weight: normal;
+  font-weight: 500;
   color: #000;
   align-self: flex-start;
   text-align: center;
@@ -60,7 +60,7 @@ ol li p {
 }
 
 ul {
-  margin: .25em;
+  margin: .5em .25em;
   padding: .7em;
   display: flex;
   justify-content: space-between;
